# eratosthenes

./: .gitignore  Cargo.toml  README.md
src/: array_manipulations.rs  common.rs  constants.rs  factorizations.rs  general.rs  lib.rs  mean.rs  palindrome.rs  prime.rs  primes.rs  sequence.rs  sequences.rs  square_operations.rs  summations.rs  trigonometry.rs
src/common/: mod.rs
src/euler_specific/: mod.rs  p5_smallest_multiple.rs  p9_special_pythagorean_triplet.rs
src/mathematics/: common.rs  fibonacci.rs  mod.rs  palindrome.rs  prime_algorithms.rs  sequence.rs  sequences.rs  square_operations.rs  triangular_numbers.rs
src/sequences/: arithmetic.rs  faulhabers.rs  fibonacci.rs  geometric.rs  mod.rs  primes.rs  square_numbers.rs  squares.rs  triangular_numbers.rs
src/statistics/: mean.rs  median.rs  mod.rs
src/trigonometry/: conversions.rs  cos.rs  mod.rs  sin.rs  tan.rs
tests/: euler_problems.rs  general_tests.rs  prime_tests.rs  sequence_tests.rs  test1.rs  trigonometry_tests.rs
